K8S/k8s-api-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-api-deployment
  labels:
    app: dotnet-api
spec:
  selector:
    matchLabels:
      app: dotnet-api
  replicas: 3
  template:
    metadata:
      labels:
        app: dotnet-api
    spec:
      containers:
      - name: api
        image: unikey/test-app-api-k8s
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dotnet-api-service
  labels:
    app: dotnet-api
spec:
  selector:
    app: dotnet-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
