K8S/k8s-mq-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit-mq-deployment
  labels:
    app: rabbit
spec:
  selector:
    matchLabels:
      app: rabbit
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbit
    spec:
      containers:
      - name: rabbit-mq
        image: rabbitmq
        ports:
        - containerPort: 15672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbit-mq-service
  labels:
    app: rabbit
spec:
  selector:
    app: rabbit
  ports:
  - protocol: TCP
    port: 80
    targetPort: 15672
