K8S/k8s-postgresql-config.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
  labels:
    app: postgresql
spec:
  selector:
    app: postgresql
  clusterIP: None
  ports:
  - port: 80
    targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql-deployment
  labels:
    app: postgresql
spec:
  serviceName: postgresql-service
  selector:
    matchLabels:
      app: postgresql
  replicas: 3
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - name: postgresql
        image: postgres
        ports:
        - containerPort: 5432
